--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -161,3 +161,17 @@ ul {
   transform: scaleX(1);
   opacity: 1;
 }
+
+.progress-bar-dynamic {
+  float: left;
+  height: 100%;
+  font-size: 12px;
+  line-height: 20px;
+  color: #fff;
+  text-align: center;
+  -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .3);
+          box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .3);
+  -webkit-transition: width .6s ease;
+       -o-transition: width .6s ease;
+          transition: width .6s ease;
+}
