--- a/client/views/searchHistory.html
+++ b/client/views/searchHistory.html
@@ -5,7 +5,7 @@
         <div class="well-lg middle-about">
           <h2>Search History</h2>
           <hr/>
-          <p class="lead text-info text-justify">{{paragraph}}</p>
+          <p class="lead text-info text-center">{{paragraph}}</p>
         </div>
       </div>
     </div>
