--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -87,14 +87,15 @@ table {
   text-align: center;
 }
 
-.panel-heading {
-  text-align: right;
-  padding-right: 15%;
+.item {
+  text-align: left;
+  padding-left: 13px;
 }
 
 .panel {
   border-color: #e1e8ed;
   background-color: #ebebeb;
+  padding: 2px;
 }
 
 .lead {
@@ -107,6 +108,7 @@ ul {
 
 .media-photo {
   width: 250px;
+  height: auto;
 }
 
 .bdg-score {
@@ -170,8 +172,8 @@ ul {
   color: #fff;
   text-align: center;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .3);
-          box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .3);
+  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .3);
   -webkit-transition: width .6s ease;
-       -o-transition: width .6s ease;
-          transition: width .6s ease;
+  -o-transition: width .6s ease;
+  transition: width .6s ease;
 }
