--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -130,6 +130,16 @@ ul {
 }
 
 
+/* begin: total average scores page */
+
+.score-chart {
+  margin: auto, 27%;
+}
+
+
+/* end: total average scores page */
+
+
 /*animation*/
 
 .slide.ng-leave {
