all sorts work now

--- a/client/views/searchBar.results.html
+++ b/client/views/searchBar.results.html
@@ -54,9 +54,9 @@
                 <a href="">Green</a>
                 <span class="sortorder" ng-show="predicate === 'sortBy.green'" ng-class="{reverse:reverse}"></span>
               </li>
-              <li role="menuitem" ng-click="order('sortBy.liberatarian')">
-                <a href="">Liberatarian</a>
-                <span class="sortorder" ng-show="predicate === 'sortBy.liberatarian'" ng-class="{reverse:reverse}"></span>
+              <li role="menuitem" ng-click="order('sortBy.libertarian')">
+                <a href="">Libertarian</a>
+                <span class="sortorder" ng-show="predicate === 'sortBy.libertarian'" ng-class="{reverse:reverse}"></span>
               </li>
             </ul>
           </div>
