--- a/client/views/searchBar.results.html
+++ b/client/views/searchBar.results.html
@@ -128,7 +128,7 @@
                       <div class="progress">
                         <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:{{item.emotion.score}}%">
                           <span uib-tooltip="{{item.tt.emotion}}" tooltip-class="addclasshere">{{item.emotion.score}}%
-                            {{item.emotion.emotion}}</span>
+                            {{item.emotion.renameThis}}</span>
                         </div>
                       </div>
                     </li>
@@ -137,7 +137,7 @@
                       <div class="progress">
                         <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:{{item.political.score}}%">
                           <span uib-tooltip="{{item.tt.political}}" tooltip-class="addclasshere">{{item.political.score}}%
-                            {{item.political.party}}</span>
+                            {{item.political.renameThis}}</span>
                         </div>
                       </div>
                     </li>
@@ -146,7 +146,7 @@
                       <div class="progress">
                         <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:{{item.personality.score}}%">
                           <span uib-tooltip="{{item.tt.personality}}" tooltip-class="addclasshere">{{item.personality.score}}%
-                            {{item.personality.personality}}</span>
+                            {{item.personality.renameThis}}</span>
                         </div>
                       </div>
                     </li>
