--- a/client/views/signin.html
+++ b/client/views/signin.html
@@ -10,7 +10,7 @@
             <button class="btn btn-submit" ng-disabled="signinForm.$invalid">sign in</button>
           </form>
           <h6>
-            <a href="#/signup">Don't have an account?<br>
+            <a ui-sref="signup">Don't have an account?<br>
               <strong>Create one!</strong>
             </a>
           </h6>
