fb signin front end

--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -64,14 +64,6 @@ table {
 
 /* begin: signin & signup pages*/
 
-.inputdata input {
-  font-size: 15px;
-  display: block;
-  width: 445px;
-  margin-bottom: 5px;
-  padding: 10px;
-  text-align: center;
-}
 
 .middle {
   margin-right: 30%;
@@ -201,4 +193,6 @@ ul {
   color: white;
 }
 
-
+.middled {
+  margin: 0 auto;
+}
