--- a/client/views/searchBar.results.html
+++ b/client/views/searchBar.results.html
@@ -89,7 +89,7 @@
         <!-- /panel-heading -->
       </div>
       <div class="panel-body">
-        <div class="list-group" ng-repeat="item in data.data | orderBy:predicate:reverse">
+        <div class="list-group" ng-repeat="item in data.data | orderBy:predicate:reverse" ng-style = 'myStyle'>
           <ul class="list-group">
             <li class="list-group-item">
               <div class="media media-news">
@@ -105,13 +105,11 @@
                     <h4 class="media-heading">{{item.headline}}</h4>
                     <!-- story -->
                     <p class="text">{{item.summary}}</p>
+                      <i class="fa fa-star" ng-class ="{yellow:$storage.favs[item.headline] || headlines[item.headline]}" ng-click="createFav({url:item.url, headline: item.headline, summary: item.summary, headline:item.headline,img:item.img, thumbnail: item.thumbnail.url})"></i>
                     <a class="btn btn-info bdg-score" href="{{item.url}}" target="_blank" role="button">
                       <img src="{{item.img}}" alt="X" width="16" height="16"/>
                       View source &raquo;
                     </a>
-                  <button class='star' ng-click= "createFav({url:item.url, headline: item.headline, summary: item.summary, headline:item.headline,img:item.img, thumbnail: item.thumbnail.url})">
-                  <span>&#x2606</span>
-                  </button>
                   </div>
                 </div>
                 <!-- sentiment score visual -->
