--- a/client/views/signup.html
+++ b/client/views/signup.html
@@ -8,8 +8,8 @@
           <a href="/auth/twitter" class="btn oauth"><img src="/assets/twitter-signin.png" alt="Log in with twitter" class="img-responsive"></a>
           <h2> - or - <h2>
           <form class="inputdata" name="signupForm" ng-submit="signup()" novalidate>
-            <input uib-tooltip="Username must be at least 6 characters long." name="username" type="text" placeholder="username" ng-model="user.username" ng-minlength="6" required>
-            <input uib-tooltip="Password must be at least 6 characters long. Please use a secure password. ex: 'password123'" name="password" type="password" placeholder="password" ng-model="user.password" ng-minlength="6" required>
+            <input uib-tooltip="Username must be at least 6 characters long." name="username" type="text" placeholder="username" ng-model="user.username" ng-minlength="6" ng-required="true" class="form-control">
+            <input uib-tooltip="Password must be at least 6 characters long. Please use a secure password. ex: 'password123'" name="password" type="password" placeholder="password" ng-model="user.password" ng-minlength="6"  ng-required="true" class="form-control">
             <button class="btn btn-submit" ng-disabled="signupForm.$invalid">sign up</button>
           </form>
           <h6>
